Centered images on the page. Need to fix spacing.

--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ body {
   color:#FFFFFF;
   opacity:.8;
 }
+
+#images {
+  text-align:center;
+  position:relative;
+  top:100px;
+}
